--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@
      db:
        image: postgres:latest
        environment:
-         POSTGRES_DB: ваша_фамилия
+         POSTGRES_DB: Шалыгин
          POSTGRES_USER: user
          POSTGRES_PASSWORD: password
        volumes:
